# katas

./: LICENSE  haskell-katas.cabal  haskell-playground.cabal
haskell/: cabal.project  haskell-katas.cabal
haskell/src/: Containers.hs  Continuation.hs  Effects.hs  Effects2.hs  Error.hs  Exceptions.hs  ForAll.hs  Has.hs  Heterogeneous.hs  Lens.hs  Lift.hs  MaxMinCounts.hs  MaxOverlapSets.hs  OtherPrelude.hs  RowTypes.hs  Script.hs  TypeApplications.hs
rust/: Cargo.toml  arrays.rs  borrow.rs  box.rs  generics.rs  hello.rs  iters.rs  iters2.rs  loop.rs  move.rs  nll.rs  play.rs  slice.rs  strings.rs  vec.rs
rust/src/: main.rs
src/: FunDeps.hs  Has.hs  Main.hs
