name:                haskell-katas
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Ricardo Catalinas Jiménez
maintainer:          r@untroubled.be
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.20

executable katas
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >=4.11 && <5
                     , containers
                     , mtl
                     , data-has
