name:                haskell-katas
version:             0.1.0.0
author:              Ricardo Catalinas Jiménez
maintainer:          r@untroubled.be
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       2.0

executable katas
  ghc-options:         -Wall
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Has
                     , ForAll
                     , FunDeps
                     , Heterogeneous
                     , Script
                     , Exceptions
                     , Containers
                     , Lift
  build-depends:       base >=4.11 && <5
                     , containers
                     , mtl
                     , data-has
                     , microlens
                     , typed-process
                     , errors
                     , safe-exceptions
                     , mono-traversable
                     , unliftio
                     , HList
