cabal-version:       3.0
name:                haskell-katas
version:             0.1.0.0
author:              Ricardo Catalinas Jiménez
maintainer:          r@untroubled.be
build-type:          Simple
extra-source-files:  ChangeLog.md

executable katas
  ghc-options:         -Wall
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Has
                     , ForAll
                     , FunDeps
                     , Heterogeneous
                     , Script
                     , Exceptions
                     , Containers
                     , Lift
                     , OtherPrelude
                     , Lens
                     , Error
                     , Continuation
  build-depends:       base >=4.11 && <5
                     , containers
                     , mtl
                     , transformers
                     , data-has
                     , microlens-platform
                     , typed-process
                     , errors
                     , safe-exceptions
                     , mono-traversable
                     , unliftio
                     , rio
                     , text
                     , unordered-containers
